# DesktopApplications

./: .gitignore  CMakeLists.txt
src/: dialog_base.cpp  dialog_base.hpp  gen_background.cpp  gen_background.hpp  idea_tree.cpp  idea_tree.hpp  main.cpp  main_dialog.cpp  main_dialog.hpp  main_frame.cpp  main_frame.hpp  notepad.cpp  notepad.hpp
src/frame_work/: board.hpp  button.hpp  component.hpp  frame.cpp  frame.hpp  icon.cpp  icon.hpp  object.hpp  panel.hpp  scrollbar.cpp  scrollbar.hpp  text_field.cpp  text_field.hpp
